--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div id="xm">
   <xm-header (login)="showLogin = true" (logout)="logout()"></xm-header>
   <div class="content">
+    <button (click)="setUser()">set user</button>
     <div class="container">
       <div class="breadcrumb-wrap">
         <xm-breadcrumb>
