--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -7,7 +7,7 @@
       <h1>Angular</h1>
     </div>
     <div class="user">
-      <a *ngIf="!user else context" (click)="login.emit()">请登录</a>
+      <a *ngIf="!user?.name else context" (click)="login.emit()">请登录</a>
       <ng-template #context>
         {{ user.name }},<a (click)="logout.emit()">退出</a>
       </ng-template>
