--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -6,6 +6,9 @@
       <img src="../../../assets/images/logo2.png" alt="migu-music" />
       <h1>Angular</h1>
     </div>
+    <div class="mid">
+      <a routerLink="/book">Book</a>
+    </div>
     <div class="user">
       <a *ngIf="!user?.name else context" (click)="login.emit()">请登录</a>
       <ng-template #context>
