--- a/src/app/pages/albums/albums.component.html
+++ b/src/app/pages/albums/albums.component.html
@@ -31,48 +31,50 @@
       <a class="clear" (click)="unCheckMeta('clear')">清除全部</a>
     </div>
   </div>
-  <div class="albums" *ngrxLet="albumsInfo$; let albumsInfo">
-    <div class="album-head">
-      <div class="title">
-        <b>{{ albumsInfo?.pageConfig.h1title }}</b>
-      </div>
-      <ul class="sort">
-        <li
-          *ngFor="let item of sorts; index as i"
-          [class.checked]="i === searchParams.sort"
-          (click)="changeSort(i)">
-          {{item}}
-        </li>
-      </ul>
-    </div>
-    <div class="album-cards">
-      <div class="album-card" [routerLink]="'/album/' + album.albumId" *ngFor="let album of albumsInfo?.albums; trackBy: trackByAlbums">
-        <div class="cover">
-          <!--    图片地址加上!strip=1&quality=7&magick=webp&op_type=3&columns=290&rows=290，尺寸就会变为140 * 140      -->
-          <img class="thumbnail" [xmImgLazy]="album.coverPath + '!strip=1&quality=7&magick=webp&op_type=3&columns=290&rows=290'" [alt]="[album.title]">
-          <img class="icon-play" (click)="playAlbum($event, album.albumId)" src="../../../assets/images/icon-play-cover.png" />
-          <p class="listen-count">
-            <i xmIcon="headset" class="icon"></i>
-            <span>{{ album.playCount | numberFormat }}</span>
-          </p>
+  <ng-container *ngrxLet="albumsInfo$; let albumsInfo">
+    <div class="albums">
+      <div class="album-head">
+        <div class="title">
+          <b>{{ albumsInfo?.pageConfig?.h1title }}</b>
         </div>
-        <div class="abstract">
-          <p class="txt title ellipsis">
-            <xm-tag *ngIf="album.isFinished === 2" xmColor="green" class="tag">完本</xm-tag>
-            <span>{{ album.title }}</span>
-          </p>
-          <p class="txt author"><span>{{ album.anchorName }}</span></p>
+        <ul class="sort">
+          <li
+            *ngFor="let item of sorts; index as i"
+            [class.checked]="i === searchParams.sort"
+            (click)="changeSort(i)">
+            {{item}}
+          </li>
+        </ul>
+      </div>
+      <div class="album-cards">
+        <div class="album-card" [routerLink]="'/album/' + album.albumId" *ngFor="let album of albumsInfo?.albums; trackBy: trackByAlbums">
+          <div class="cover">
+            <!--    图片地址加上!strip=1&quality=7&magick=webp&op_type=3&columns=290&rows=290，尺寸就会变为140 * 140      -->
+            <img class="thumbnail" [xmImgLazy]="album.coverPath + '!strip=1&quality=7&magick=webp&op_type=3&columns=290&rows=290'" [alt]="[album.title]">
+            <img class="icon-play" (click)="playAlbum($event, album.albumId)" src="../../../assets/images/icon-play-cover.png" />
+            <p class="listen-count">
+              <i xmIcon="headset" class="icon"></i>
+              <span>{{ album.playCount | numberFormat }}</span>
+            </p>
+          </div>
+          <div class="abstract">
+            <p class="txt title ellipsis">
+              <xm-tag *ngIf="album.isFinished === 2" xmColor="green" class="tag">完本</xm-tag>
+              <span>{{ album.title }}</span>
+            </p>
+            <p class="txt author"><span>{{ album.anchorName }}</span></p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="page-wrap">
-    <xm-pagination
-      class="page"
-      [pageNum]="searchParams.page"
-      [pageSize]="searchParams.perPage"
-      [total]="total"
-      (changed)="changePage($event)">
-    </xm-pagination>
-  </div>
+    <div class="page-wrap">
+      <xm-pagination
+        class="page"
+        [pageNum]="searchParams.page"
+        [pageSize]="searchParams.perPage"
+        [total]="albumsInfo?.total"
+        (changed)="changePage($event)">
+      </xm-pagination>
+    </div>
+  </ng-container>
 </div>
