--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -4,11 +4,11 @@
   <div class="container">
     <div class="logo">
       <img src="../../../assets/images/logo2.png" alt="migu-music" />
-      <h1>Angular</h1>
+      <h1>Angular 11</h1>
     </div>
     <div class="mid">
-      <a routerLink="/book">Book</a> ｜
-      <a routerLink="/movie">Movie</a>
+      <a routerLink="/book">Books</a> ｜
+      <a routerLink="/movie">Movies</a>
     </div>
     <div class="user">
       <a *ngIf="!user?.name else context" (click)="login.emit()">请登录</a>
