--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -8,7 +8,8 @@
     </div>
     <div class="mid">
       <a routerLink="/book">Book</a> ｜
-      <a routerLink="/movie">Movie</a>
+      <a routerLink="/movie">Movie</a> ｜
+      <a routerLink="/expands">Expands</a>
     </div>
     <div class="user">
       <a *ngIf="!user?.name else context" (click)="login.emit()">请登录</a>
